# AutonomDocking

./: README.md  astyring_uten_autonomi_kalibrert.py
AutonomDocking/ros2_ws/src/auv_docking/auv_docking/: image_handler.py
a_docking/: amain.py  arov_navigator.py  aruco_detector.py
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/auv_docking/lib/auv_docking/: aruco_handler  aruco_node  camera_handler  camera_node  image_handler  navigation_node  navigation_node = auv_docking.navigation_node:maincamera_node  test_node
ros2_ws/install/auv_docking/share/auv_docking/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/auv_docking/share/auv_docking/launch/: demo.launch.py
ros2_ws/log/: latest_build  latest_list
ros2_ws/models/dock_description/: CMakeLists.txt  package.xml
ros2_ws/models/dock_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
ros2_ws/models/dock_description/meshes/: 800x1200_PALLET_STP.step_1.stl  ARUCO 19.stl  BRACKET.stl  DOCKING PLATE.stl  PUCK ASSEMBLY.stl  STEEL PLATE.stl  SUBSEA USB_BB8290_Step_Rev-02.stl  base_link.stl
ros2_ws/models/dock_description/urdf/: DOCKING.gazebo  DOCKING.trans  DOCKING.xacro  materials.xacro
ros2_ws/src/auv_docking/: CMakeLists.txt  setup.cfg  setup.py
ros2_ws/src/auv_docking/auv_docking/: navigation_node.py  test_node.py
ros2_ws/worlds/: swimming_pool.world
